`Feature`: Test View in Grading Edition (#183)
* Create initial draft version of Test view in Grading.
* Cleanup Packages & Hide Reload Button for Tests in Assessment Mode (#186)
** Rename grading feature
** Fixed packages. Moved parts of the inlined messages to messages
** Cleanup of common.view
** Fixes some nullpointers and refactoring code (misuse of ResultDTO in Lock)
* Revert some change that was not needed anymore in LockCallAssessmentResult.java