@@ -2,29 +2,25 @@
 package edu.kit.kastel.eclipse.student.view.controllers;
 
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import edu.kit.kastel.eclipse.common.view.controllers.AbstractArtemisViewController;
 import edu.kit.kastel.eclipse.student.view.activator.Activator;
-import edu.kit.kastel.sdq.eclipse.grading.api.ArtemisClientException;
-import edu.kit.kastel.sdq.eclipse.grading.api.artemis.mapping.Feedback;
-import edu.kit.kastel.sdq.eclipse.grading.api.artemis.mapping.IExam;
-import edu.kit.kastel.sdq.eclipse.grading.api.artemis.mapping.IExercise;
-import edu.kit.kastel.sdq.eclipse.grading.api.artemis.mapping.IStudentExam;
-import edu.kit.kastel.sdq.eclipse.grading.api.artemis.mapping.ResultsDTO;
-import edu.kit.kastel.sdq.eclipse.grading.api.client.websocket.WebsocketCallback;
-import edu.kit.kastel.sdq.eclipse.grading.api.controller.IStudentSystemwideController;
-import edu.kit.kastel.sdq.eclipse.grading.api.controller.ISystemwideController;
-import edu.kit.kastel.sdq.eclipse.grading.api.model.IAnnotation;
+import edu.kit.kastel.sdq.eclipse.common.api.ArtemisClientException;
+import edu.kit.kastel.sdq.eclipse.common.api.artemis.mapping.Feedback;
+import edu.kit.kastel.sdq.eclipse.common.api.artemis.mapping.IExam;
+import edu.kit.kastel.sdq.eclipse.common.api.artemis.mapping.IExercise;
+import edu.kit.kastel.sdq.eclipse.common.api.artemis.mapping.IStudentExam;
+import edu.kit.kastel.sdq.eclipse.common.api.artemis.mapping.ResultsDTO;
+import edu.kit.kastel.sdq.eclipse.common.api.client.websocket.WebsocketCallback;
+import edu.kit.kastel.sdq.eclipse.common.api.controller.IStudentSystemwideController;
+import edu.kit.kastel.sdq.eclipse.common.api.model.IAnnotation;
+import edu.kit.kastel.sdq.eclipse.common.api.util.Pair;
 
-public class StudentViewController extends AbstractArtemisViewController {
-	private IStudentSystemwideController systemwideController;
+public class StudentViewController extends AbstractArtemisViewController<IStudentSystemwideController> {
 
 	public StudentViewController() {
-		Activator.getDefault().createSystemWideController();
-		this.systemwideController = Activator.getDefault().getSystemwideController();
+		super(Activator.getDefault().createSystemWideController());
 		this.initializeControllersAndObserver();
 	}
 
@@ -40,7 +36,7 @@ public class StudentViewController extends AbstractArtemisViewController {
 		this.systemwideController.cleanWorkspace();
 	}
 
-	public Map<ResultsDTO, List<Feedback>> getFeedbackExcerise() {
+	public Pair<ResultsDTO, List<Feedback>> getFeedbackExcerise() {
 		return this.systemwideController.getFeedbackExcerise();
 	}
 
@@ -69,7 +65,7 @@ public class StudentViewController extends AbstractArtemisViewController {
 		try {
 			this.systemwideController.setExerciseIdWithSelectedExam(exerciseShortName);
 		} catch (ArtemisClientException e) {
-			this.alertObserver.error(e.getMessage(), e);
+			this.viewObserver.error(e.getMessage(), e);
 		}
 	}
 
@@ -79,7 +75,7 @@ public class StudentViewController extends AbstractArtemisViewController {
 
 	@Override
 	public List<String> getExercisesShortNamesForExam(String examShortName) {
-		return this.systemwideController.getExerciseShortNamesFromExam(examShortName).stream().map(IExercise::getShortName).collect(Collectors.toList());
+		return this.systemwideController.getExerciseShortNamesFromExam(examShortName).stream().map(IExercise::getShortName).toList();
 	}
 
 	public IExam setExam(String examName) {
@@ -92,11 +88,6 @@ public class StudentViewController extends AbstractArtemisViewController {
 
 	public IStudentExam startExam() {
 		return this.systemwideController.startExam();
-	}
-
-	@Override
-	protected ISystemwideController getSystemwideController() {
-		return this.systemwideController;
 	}
 
 	public String getExamUrlForCurrentExam() {
@@ -119,7 +110,7 @@ public class StudentViewController extends AbstractArtemisViewController {
 		return this.systemwideController.getAnnotations();
 	}
 
-	public String getCurrentProjectName() {
+	public String getCurrentProjectNameInEclipse() {
 		return this.systemwideController.getCurrentProjectName();
 	}
 }
